snake is extending and added score